deployments/staging/moodtrackerapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodtrackerapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodtrackerapi
  template:
    metadata:
      labels:
        app: moodtrackerapi
    spec:
      containers:
        - name: moodtrackerapi
          image: ghcr.io/drxxmn/sentimate-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: moodtrackerapi
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: moodtrackerapi
