deployments/staging/progresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: bitnami/postgresql:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-data
              mountPath: /bitnami/postgresql
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-data

---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
