deployments/staging/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: httpsB
      protocol: HTTPS
      port: 443
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: backend-cert
        mode: Terminate
    - name: httpsF
      protocol: HTTPS
      port: 443
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: frontend-cert
        mode: Terminate
